@@ -299,7 +299,8 @@ EXTERN FILE *outfile;
 /* Declare various functions.  */
 
 /* analyze.c */
-struct change * diff_2_files PARAMS((struct file_data[], int, int *, int));
+/* WinMerge: add last two params */
+struct change * diff_2_files PARAMS((struct file_data[], int, int *, int, int*));
 
 /* context.c */
 void print_context_header PARAMS((struct file_data[], int));
@@ -319,7 +320,8 @@ void pr_forward_ed_script PARAMS((struct change *));
 void print_ifdef_script PARAMS((struct change *));
 
 /* io.c */
-int read_files PARAMS((struct file_data[], int));
+/* WinMerge: add last pointer param */
+int read_files PARAMS((struct file_data[], int, int *));
 int sip PARAMS((struct file_data *, int));
 void slurp PARAMS((struct file_data *));
 
